# aquatic-mapping

./: .gitignore  README.md  analyze_sonar_log.py  requirements.txt  setup.sh  start_rover_sim.sh
infra/: README.md  USAGE.md
src/control/: CMakeLists.txt  package.xml
src/control/config/: five_fields.rviz  full.rviz  rover_viz.rviz
src/control/data/radial/trial_1/: radial_samples.csv
src/control/data/radial/trial_1/radial_bag/: metadata.yaml  radial_bag_0.mcap
src/control/data/radial/trial_10/: radial_samples.csv
src/control/data/radial/trial_10/radial_bag/: metadata.yaml  radial_bag_0.mcap
src/control/data/radial/trial_2/: radial_samples.csv
src/control/data/radial/trial_2/radial_bag/: metadata.yaml  radial_bag_0.mcap
src/control/data/radial/trial_3/: radial_samples.csv
src/control/data/radial/trial_3/radial_bag/: metadata.yaml  radial_bag_0.mcap
src/control/data/radial/trial_4/: radial_samples.csv
src/control/data/radial/trial_4/radial_bag/: metadata.yaml  radial_bag_0.mcap
src/control/data/radial/trial_5/: radial_samples.csv
src/control/data/radial/trial_5/radial_bag/: metadata.yaml  radial_bag_0.mcap
src/control/data/radial/trial_6/: radial_samples.csv
src/control/data/radial/trial_6/radial_bag/: metadata.yaml  radial_bag_0.mcap
src/control/data/radial/trial_7/: radial_samples.csv
src/control/data/radial/trial_7/radial_bag/: metadata.yaml  radial_bag_0.mcap
src/control/data/radial/trial_8/: radial_samples.csv
src/control/data/radial/trial_9/: radial_samples.csv
src/control/data/x_compress/trial_1/: x_compress_samples.csv
src/control/data/x_compress/trial_10/: x_compress_samples.csv
src/control/data/x_compress/trial_2/: x_compress_samples.csv
src/control/data/x_compress/trial_3/: x_compress_samples.csv
src/control/data/x_compress/trial_4/: x_compress_samples.csv
src/control/data/x_compress/trial_5/: x_compress_samples.csv
src/control/data/x_compress/trial_6/: x_compress_samples.csv
src/control/data/x_compress/trial_7/: x_compress_samples.csv
src/control/data/x_compress/trial_8/: x_compress_samples.csv
src/control/data/x_compress/trial_9/: x_compress_samples.csv
src/control/data/x_compress_tilt/trial_1/: x_compress_tilt_samples.csv
src/control/data/x_compress_tilt/trial_10/: x_compress_tilt_samples.csv
src/control/data/x_compress_tilt/trial_2/: x_compress_tilt_samples.csv
src/control/data/x_compress_tilt/trial_3/: x_compress_tilt_samples.csv
src/control/data/x_compress_tilt/trial_4/: x_compress_tilt_samples.csv
src/control/data/x_compress_tilt/trial_5/: x_compress_tilt_samples.csv
src/control/data/x_compress_tilt/trial_6/: x_compress_tilt_samples.csv
src/control/data/x_compress_tilt/trial_7/: x_compress_tilt_samples.csv
src/control/data/x_compress_tilt/trial_8/: x_compress_tilt_samples.csv
src/control/data/x_compress_tilt/trial_9/: x_compress_tilt_samples.csv
src/control/data/y_compress/trial_1/: y_compress_samples.csv
src/control/data/y_compress/trial_10/: y_compress_samples.csv
src/control/data/y_compress/trial_2/: y_compress_samples.csv
src/control/data/y_compress/trial_3/: y_compress_samples.csv
src/control/data/y_compress/trial_4/: y_compress_samples.csv
src/control/data/y_compress/trial_5/: y_compress_samples.csv
src/control/data/y_compress/trial_6/: y_compress_samples.csv
src/control/data/y_compress/trial_7/: y_compress_samples.csv
src/control/data/y_compress/trial_8/: y_compress_samples.csv
src/control/data/y_compress/trial_9/: y_compress_samples.csv
src/control/data/y_compress_tilt/trial_1/: y_compress_tilt_samples.csv
src/control/data/y_compress_tilt/trial_10/: y_compress_tilt_samples.csv
src/control/data/y_compress_tilt/trial_2/: y_compress_tilt_samples.csv
src/control/data/y_compress_tilt/trial_3/: y_compress_tilt_samples.csv
src/control/data/y_compress_tilt/trial_4/: y_compress_tilt_samples.csv
src/control/data/y_compress_tilt/trial_5/: y_compress_tilt_samples.csv
src/control/data/y_compress_tilt/trial_6/: y_compress_tilt_samples.csv
src/control/data/y_compress_tilt/trial_7/: y_compress_tilt_samples.csv
src/control/data/y_compress_tilt/trial_8/: y_compress_tilt_samples.csv
src/control/data/y_compress_tilt/trial_9/: y_compress_tilt_samples.csv
src/control/gp/: gp_rbf.py  requirements.txt
src/control/launch/: gaussian_fields.launch.py  mission.launch.py  record_mission.launch.py  rover_bringup.launch.py
src/control/scripts/: field.py  lawnmower.py  position_controller.py  record_field_data.py  rover_monitor.py  temp_query.py
src/control/scripts/fields/: radial_field.py  world_frame_publisher.py  x_compress_field.py  x_compress_tilt_field.py  y_compress_field.py  y_compress_tilt_field.py
src/control/urdf/: r1_rover.urdf
src/info_gain/: CMakeLists.txt  PLANNERS.md  package.xml
src/info_gain/config/: mi_field.rviz
src/info_gain/config/rviz/: radial.rviz  x_compress.rviz  x_compress_tilt.rviz  y_compress.rviz  y_compress_tilt.rviz
src/info_gain/info_gain/: __init__.py  gp_model.py  peak_detection.py
src/info_gain/launch/: analytical.launch.py  aware.launch.py  exact.launch.py  mi_planner.launch.py  pose_aware.launch.py
src/info_gain/scripts/: analytical_planner.py  comparison.py  exact_planner.py  mi_to_px4_relay.py  pg_viz.py  pose_aware_planner.py  px4_odom_to_tf.py
src/info_gain/scripts/1/: mi_planner_1.py  planner_1_metrics.csv  reconstructed_field.npz
src/info_gain/scripts/2/: mi_planner_2.py  planner_2_metrics.csv  reconstructed_field.npz
src/sampling/: CMakeLists.txt  package.xml
src/sampling/launch/: mission.launch.py  rover.launch.py  rover_fields.launch.py
src/sampling/scripts/analysis/: gp.py
src/sampling/scripts/fields/: field_filter.py  radial_field.py  world_frame_publisher.py  x_compress_field.py  x_compress_tilt_field.py  y_compress_field.py  y_compress_tilt_field.py
src/sampling/scripts/logging/: logger.py  record_field_data.py
src/sampling/scripts/missions/: lawnmower.py  waypoint_runner.py
src/sampling/scripts/rover/: position_controller.py  rover_monitor.py
src/sampling/urdf/: r1_rover.urdf
(+172 files in other folders)
