<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>info_gain</name>
  <version>1.0.0</version>
  <description>Informative sampling with positional uncertainty - baseline vs uncertainty-aware planners</description>
  <maintainer email="bharathvdesikan@gmail.com">blazair</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS dependencies -->
  <depend>rclpy</depend>
  <depend>rclcpp</depend>

  <!-- PX4 integration -->
  <depend>px4_msgs</depend>

  <!-- Message types -->
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
